istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: notes-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-notes-app
spec:
  hosts:
    - "*"
  gateways:
    - notes-gateway
  http:
    - route:
        - destination:
            host: canary-notes-app-stable
          weight: 90
        - destination:
            host: canary-notes-app-canary
          weight: 10
